--- a/.gitignore
+++ b/.gitignore
@@ -236,7 +236,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
-
+.idea/
 .idea/misc.xml
 .idea/modules.xml
 .idea/serialmonitor_settings.xml
