--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "datafunc"
-version = "0.0.1"
+version = "0.0.2"
 description = "Python functions for various dict, list, and other data structures."
 license = "MIT"
 readme = "README.md"
@@ -11,10 +11,10 @@ keywords = ["python", "python3", "data", "dict", "utilities", "util", "tools", "
     "data", "mo-dots", "list", "dotty_dict", "iterate", "iterator"]
 
 [tool.poetry.dependencies]
-python = "*"
-mo-dots = ">=3.135.20303"
-dotty-dict = ">=1.3.0"
-traversy = "^0.1.2"
+python = "^3"
+mo-dots = "*"
+dotty-dict = "*"
+traversy = ">=0.1.2"
 
 [tool.poetry.dev-dependencies]
 
