--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ keywords = ["python", "python3", "data", "dict", "utilities", "util", "tools", "
     "data", "mo-dots", "list", "dotty_dict", "iterate", "iterator"]
 
 [tool.poetry.dependencies]
-python = ">=3.6,<4"
+python = ">=3.6,<4.0"
 mo-dots = "*"
 dotty-dict = "*"
 traversy = ">=0.1.2"
@@ -20,6 +20,9 @@ traversy = ">=0.1.2"
 mkdocs = "^1.1.2"
 mkdocs-material = "^6.1.5"
 mkdocstrings = "^0.13.6"
+mkdocs-combine = {git = "https://github.com/twardoch/mkdocs-combine.git"}
+mkdocs-pandoc = "^0.2.6"
+pydoc-markdown = "^3.8.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
