--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ mkdocs = "^1.1.2"
 mkdocs-material = "^6.1.5"
 mkdocstrings = "^0.13.6"
 pydoc-markdown = "^3.8.0"
+dephell = "^0.8.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
