--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,9 +6,9 @@ site_description: Python package of various functions for dict, list, and other 
 theme:
   name: "readthedocs"  # or material
 
-#plugins:
-#  - search
-#  - mkdocstrings:
+plugins:
+  - search
+  - mkdocstrings
 #      watch:
 #        - datafunc/
 #      custom_templates: docs/templates
