--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,11 +4,11 @@ site_author: Tom A.
 site_description: Python package of various functions for dict, list, and other data structures.
 
 theme:
-  name: "readthedocs"  # or material
+  name: "material"
 
 plugins:
   - search
-  - mkdocstrings
-#      watch:
-#        - datafunc/
-#      custom_templates: docs/templates
+  - mkdocstrings:
+      watch:
+        - datafunc/
+      custom_templates: docs/templates
